--- a/public/styles/sass/styles.scss
+++ b/public/styles/sass/styles.scss
@@ -244,3 +244,17 @@ main p {
       background-color: addccc !important;
     }
 }
+
+.contact-box {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 250px;
+  padding-left: 250px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.contact-form {
+  width: 510px;
+}
