--- a/public/styles/stylesheets/styles.css
+++ b/public/styles/stylesheets/styles.css
@@ -219,4 +219,18 @@ main p {
   background-color: addccc !important;
 }
 
+.contact-box {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 250px;
+  padding-left: 250px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.contact-form {
+  width: 510px;
+}
+
 /*# sourceMappingURL=styles.css.map */
