Add contact section

--- a/public/styles/sass/styles.scss
+++ b/public/styles/sass/styles.scss
@@ -189,7 +189,7 @@ main p {
 }
 
 .carousel {
-  width: 100%;
+  width: 1200px;
   height: 28.5em;
   display: flex;
   align-items: center;
@@ -197,7 +197,7 @@ main p {
 
   //div where paragraph lies within//
   .carousel-inner {
-    width: 50%;
+    width: 70%;
     height: 200px;
   }
 
@@ -241,7 +241,7 @@ main p {
 
     //indicators at bottom of carousel//
     .carousel-indicators li {
-      background-color: addccc !important;
+      background-color: #addccc !important;
     }
 }
 
@@ -253,8 +253,59 @@ main p {
   padding-left: 250px;
   padding-top: 50px;
   padding-bottom: 50px;
-}
 
-.contact-form {
-  width: 510px;
+  .contact-info {
+    padding-left: 20px;
+  }
+
+  .contact-image {
+    border: 2px solid #addccc;
+    padding: 10px;
+  }
+
+  .contact-form {
+    width: 450px;
+  }
+
+  .contact-methods {
+    margin-bottom: 25px;
+
+    .method {
+      font-family: 'Oswald', sans-serif;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      font-weight: bold;
+    }
+
+    .method-info {
+      font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
+    }
+  }
+
+  form {
+    .form-group {
+      margin-bottom: 25px;
+    }
+
+    p {
+      font-family: 'Quicksand', sans-serif;
+      font-weight: bold;
+      padding-left: 15px;
+  }
+
+    .btn-primary {
+      background-color: #addccc;
+      border-color: #addccc;
+    }
+
+    .btn-default {
+      border-color: #addccc;
+    }
+
+    .btn:hover {
+      background-color: #cdd1d6 !important;
+    }
+  }
+
 }
