--- a/public/styles/stylesheets/styles.css
+++ b/public/styles/stylesheets/styles.css
@@ -33,7 +33,6 @@ main {
   background-color: white;
   border: 2px solid red;
   position: relative;
-  z-index: 1;
 }
 
 .what-we-do-description {
@@ -77,7 +76,6 @@ main p {
   background-color: white;
   border: 2px solid red;
   position: relative;
-  z-index: 1;
 }
 .about-me h1 {
   text-align: center;
@@ -105,10 +103,9 @@ main p {
 
 #about-us {
   position: relative;
-  z-index: 1;
 }
 
-.background2 {
+#background2 {
   position: relative;
   z-index: -1;
 }
@@ -121,7 +118,6 @@ main p {
   background-color: white;
   border: 2px solid red;
   position: relative;
-  z-index: 1;
 }
 .gallery h1 {
   text-align: center;
@@ -129,6 +125,10 @@ main p {
   letter-spacing: 0.3rem;
   text-transform: uppercase;
   margin-bottom: 2.5rem;
+}
+
+#gallery-scroll {
+  position: relative;
 }
 
 .gallery-div {
@@ -262,6 +262,9 @@ main p {
   font-weight: bold;
   padding-left: 15px;
 }
+.contact-box form .form-control {
+  border-color: #addccc;
+}
 .contact-box form .col-xs-9 {
   width: 100% !important;
 }
@@ -274,6 +277,13 @@ main p {
 }
 .contact-box form .btn:hover {
   background-color: #cdd1d6 !important;
+}
+
+/* Media Query */
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 100%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
