Revise parallax effect

--- a/public/styles/sass/styles.scss
+++ b/public/styles/sass/styles.scss
@@ -186,7 +186,18 @@ main p {
   visibility: hidden;
 }
 
+#background3 {
+  position: relative;
+  // top: -850px;
+  z-index: -1;
+}
+
 /*<-----------------------------------------------Quotes Carousel---------------------------------------------------------->*/
+
+#testimonials-scroll {
+  position: relative;
+}
+
 .testimonials {
   display: flex;
   justify-content: center;
@@ -216,7 +227,7 @@ main p {
       padding-left: 1.18em;
       padding-right: 1.18em;
       font-family: serif;
-      color: #333;
+      color: #fff;
       font-family: 'Open Sans', sans-serif;
     }
 
@@ -248,6 +259,12 @@ main p {
     .carousel-indicators li {
       background-color: #addccc !important;
     }
+}
+
+#contact-scroll {
+  position: relative;
+  // top: -850px;
+  // z-index: -1;
 }
 
 .contact-box {
